# mc_potts

./: .gitignore  CMakeLists.txt
addons_python/: collect_versions.py  color.py  helper.py  parameter.py
baseline_impl_greschd/main/: test.cpp
baseline_impl_greschd/src/lib/: global.hpp  mc.hpp  system.hpp
baseline_impl_mkoenz/: accum_double.hpp  global.hpp  grid.hpp  main.cpp  random2_msk.hpp  sim.hpp
examples/: CMakeLists.txt  micro_bench_example.cpp  msk_version_comparision.cpp  msk_version_comparison.cpp  performance_example.cpp  rng_performance_example.cpp  sim_performance_example.cpp  version_comparison.cpp
examples/alpha/: rng_performance_example.cpp  sim_performance_example.cpp  version_comparison.cpp
install/: CMakeLists.txt  install_old.hpp  install_routine.py
interface/: CMakeLists.txt  rng.hpp  rng_interface.hpp  sim.hpp  sim_interface.hpp  test_prototype_interface.cpp
old/baseline_impl_greschd/example/: after.ppm
old/baseline_impl_greschd/potts_impl2d/: global.hpp  ppm_picture.hpp  system.hpp
old/baseline_impl_mkoenz/: sim.hpp  video.sh
old/baseline_impl_mkoenz/images/: out.ppm
performance/: CMakeLists.txt  build_dir.py.in  compile_all.py  mem_traffic.py  perf.cpp  perf_opt.cpp  perf_opt_full.cpp  perf_pcm_mem.cpp  perf_pcm_mem_opt.cpp  perf_pcm_mem_opt_full.cpp  perf_raw.cpp  performance_screen.py  performance_search.py  runtime.py  screen.cpp
plot/: CMakeLists.txt  matrix_plot.py
plot/fullscreen/: full_sceen_msk.txt
plot/greschd_plots/: data.txt  dg_1000.txt  dg_20.txt  full_screen_dg.txt
plot/mc_movie/: CMakeLists.txt  mc_movie.cpp  video.sh
plot/micro_bench_v0/: CMakeLists.txt  micro_bench_plot.cpp  micro_bench_plot.py
plot/mskoenz_plots/: data.txt  full_screen_msk.txt  msk_20.txt  msk_300.txt
plot/roofline/: CMakeLists.txt  rooflinePlot.py
report/: report.tex
src/: CMakeLists.txt  alpha.hpp  conf.hpp  conf.hpp.in  conf.hpp.in~  global.hpp  mc_potts.hpp  mc_potts_full.hpp  meta_tpl.hpp  result.hpp  result_struct.hpp  std_mt_rng.hpp  types.hpp  validation.hpp
src/addon/: accum.hpp  accum_double.hpp  accum_int.hpp  color.hpp  debug.hpp  micro_bench.hpp  performance.hpp
src/alpha/baseline_count_ops/: global.hpp  grid.hpp  sim.hpp
src/alpha/baseline_impl_greschd/: sim.hpp  system.hpp
src/alpha/baseline_impl_mskoenz/: global.hpp  grid.hpp  sim.hpp
src/alpha/dag_v02/: sim.hpp  system.hpp
src/alpha/msk_v01/: grid.hpp  sim.hpp
src/alpha/old/baseline_impl_greschd/example/: before.ppm  example.cpp
src/alpha/old/baseline_impl_greschd/potts_impl2d/: mc.hpp
src/alpha/old/baseline_impl_mkoenz/: grid.hpp
src/alpha/v1_int2t/: global.hpp  sim.hpp  system.hpp
src/baseline_impl_greschd/: global.hpp  global_baseline_greschd.hpp  rng.hpp  sim.hpp  sim_baseline_greschd.hpp  system.hpp  system_baseline_greschd.hpp
src/baseline_impl_greschd/lib/: ppm_picture.hpp  sim.cpp  system.cpp
src/baseline_impl_mskoenz/: global.hpp  grid.hpp  random2_msk.hpp  sim.hpp
src/dag_v02/: global.hpp  int2t_vec.hpp  sim.hpp  system.hpp
src/grid/: baseline_greschd_grid.hpp  beta_grid.hpp  msk_v0_pbc.hpp  msk_v1_pbc.hpp
src/interface/: grid_interface.hpp  matrix_interface.hpp  rng_interface.hpp  sim_interface.hpp  validate_interface.hpp
src/matrix/: baseline_greschd_matrix.hpp  beta_matrix.hpp  int2t_v01_matrix.hpp  msk_v0_c_array_dynamic.hpp  msk_v0_c_array_static.hpp  msk_v0_std_vec.hpp  msk_v1_zorder.hpp  msk_v2_dynamic_zip.hpp  msk_v2_static_zip.hpp  msk_v3_zip_order.hpp
src/msk_v01/: global.hpp  grid.hpp  sim.hpp
src/rng/: beta_rng.hpp  custom_mt_rng.hpp  lag_fib_rng.hpp  mkl_mt_rng.hpp  std_mt_rng.hpp
src/sim/: baseline_greschd_sim.hpp  beta_sim.hpp  greschd_v1_sim.hpp  greschd_v2_sim.hpp  greschd_v3_sim.hpp  greschd_v4_sim.hpp  greschd_v5_sim.hpp  greschd_v6_sim.hpp  msk_v0_sim.hpp  msk_v1_sim.hpp
src/v1_int2t/: global_v1.hpp  int2t_vec.hpp  sim.hpp  sim_v1.hpp  system.hpp  system_v1.hpp
test/: CMakeLists.txt  baseline_greschd_test.cpp  int2t_greschd_test.cpp  msk_v1_test.cpp  screen_performance.cpp  sse_z_order.cpp  sse_z_order_dim8.cpp  test_baseline_greschd.cpp  test_baseline_mskoenz.cpp  test_install.cpp  test_int2t_vec.cpp  test_interface.cpp  test_micro_bench.cpp  test_mkl_mt_rng.cpp  test_prototype_interface.cpp  test_rng_baseline_greschd.cpp  test_sim_rng_interface.cpp  test_v1.cpp  test_validation.cpp  validation.cpp  zorder.cpp
test/alpha/: CMakeLists.txt  baseline_count_ops.cpp  test_baseline_greschd.cpp  test_baseline_mskoenz.cpp  test_int2t_vec.cpp  test_interface.cpp  test_rng_baseline_greschd.cpp  test_v1.cpp  test_validation.cpp
test/validation_framework/: validate.cpp
validation/: CMakeLists.txt  validate.cpp  validate_all.py
